--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,16 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath 'org.spongepowered:mixingradle:0.4-SNAPSHOT'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$project_kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'kotlin'
 apply plugin: 'java'
 
-// Version from Hacks.kt
 def version_text = new File(projectDir, "src/main/kotlin/com/cout970/fira/FiraClient.kt").text
 version_text = version_text.find(Pattern.compile("const val MOD_VERSION = \"\\d.\\d.\\d\""))
 version_text = version_text.substring(25, version_text.length() - 1)
@@ -68,7 +70,6 @@ dependencies {
         exclude module: 'gson'
         exclude module: 'commons-io'
     }
-    compile group: 'org.javassist', name: 'javassist', version: '3.27.0-GA'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$project_kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$project_kotlin_version"
@@ -114,4 +115,23 @@ jar {
     }
 }
 
+shadowJar {
+    dependencies {
+        include(dependency('org.spongepowered:mixin'))
+        include(dependency('org.jetbrains.kotlin:kotlin-stdlib'))
+        include(dependency('org.jetbrains.kotlin:kotlin-stdlib-jdk8'))
+        include(dependency('org.jetbrains.kotlin:kotlin-reflect'))
+    }
+    exclude 'dummyThing'
+    classifier = 'release'
+}
+
+reobf {
+    shadowJar {
+        mappingType = 'SEARGE'
+        classpath = sourceSets.main.compileClasspath
+    }
+}
+
 compileKotlin.dependsOn clean
+build.dependsOn(shadowJar)
